[gd_scene load_steps=29 format=3 uid="uid://bfc5tgxjmwdnk"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_06e1l"]
[ext_resource type="AudioStream" uid="uid://doj0ldmh56oxu" path="res://assets/sfx/walk_gravel_1.wav" id="2_ppnas"]
[ext_resource type="AudioStream" uid="uid://hnii2t0mrwk3" path="res://assets/sfx/walk_gravel_2.wav" id="3_du8lt"]
[ext_resource type="AnimationLibrary" uid="uid://vccv2xslcju" path="res://assets/anims/humaniod.glb" id="3_ewxq3"]
[ext_resource type="AudioStream" uid="uid://ctohwxs2n3qc" path="res://assets/sfx/walk_gravel_3.wav" id="4_c7gho"]
[ext_resource type="AudioStream" uid="uid://erxw15o75xrt" path="res://assets/sfx/walk_gravel_4.wav" id="5_clk28"]
[ext_resource type="AudioStream" uid="uid://cm1qagri6jlgo" path="res://assets/sfx/walk_gravel_5.wav" id="6_jnyfn"]
[ext_resource type="AudioStream" uid="uid://b8yp1vsirypso" path="res://assets/sfx/walk_gravel_6.wav" id="7_dt01v"]
[ext_resource type="AudioStream" uid="uid://d3fqhody3bvd0" path="res://assets/sfx/walk_gravel_7.wav" id="8_xfxci"]
[ext_resource type="PackedScene" uid="uid://dcjdur4u2aab8" path="res://assets/models/man/man.glb" id="10_6luyg"]
[ext_resource type="AudioStream" uid="uid://c1svx8oh0ysr4" path="res://assets/sfx/crunch.wav" id="11_weln5"]

[sub_resource type="SphereMesh" id="SphereMesh_t5gpr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c5s33"]
albedo_color = Color(0.0823529, 0.0980392, 0.137255, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2n4y3"]
particle_flag_align_y = true
direction = Vector3(0, 0, -1)
spread = 0.0
initial_velocity_min = 2.0
initial_velocity_max = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qop5q"]
albedo_color = Color(0.308462, 0.370432, 0.124415, 1)

[sub_resource type="SphereMesh" id="SphereMesh_2w1if"]
material = SubResource("StandardMaterial3D_qop5q")
radius = 0.05
height = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tix6w"]
radius = 0.231513
height = 1.78443

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_52imh"]
animation = &"humaniod/died"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_65wpd"]
animation = &"humaniod/idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4uwvq"]
animation = &"humaniod/run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_glyf0"]
blend_point_0/node = SubResource("AnimationNodeAnimation_65wpd")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_4uwvq")
blend_point_1/pos = 0.5
min_space = 0.0
max_space = 5.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fj3vr"]
animation = &"humaniod/vomit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vtbsc"]
animation = &"humaniod/vomit_start"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m00lj"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_njf7f"]
xfade_time = 0.25
advance_mode = 2
advance_condition = &"vomit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3364n"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_77gsp"]
xfade_time = 0.25
advance_mode = 2
advance_condition = &"died"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_cpqmt"]
states/died/node = SubResource("AnimationNodeAnimation_52imh")
states/died/position = Vector2(596, 100)
states/movement/node = SubResource("AnimationNodeBlendSpace1D_glyf0")
states/movement/position = Vector2(385, 100)
states/vomit/node = SubResource("AnimationNodeAnimation_fj3vr")
states/vomit/position = Vector2(613, 197)
states/vomit_start/node = SubResource("AnimationNodeAnimation_vtbsc")
states/vomit_start/position = Vector2(385, 197)
transitions = ["Start", "movement", SubResource("AnimationNodeStateMachineTransition_m00lj"), "movement", "vomit_start", SubResource("AnimationNodeStateMachineTransition_njf7f"), "vomit_start", "vomit", SubResource("AnimationNodeStateMachineTransition_3364n"), "movement", "died", SubResource("AnimationNodeStateMachineTransition_77gsp")]
graph_offset = Vector2(-15, 6)

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_06e1l")
footsteps_list = Array[AudioStreamWAV]([ExtResource("2_ppnas"), ExtResource("3_du8lt"), ExtResource("4_c7gho"), ExtResource("5_clk28"), ExtResource("6_jnyfn"), ExtResource("7_dt01v"), ExtResource("8_xfxci")])

[node name="Visual" type="Node3D" parent="."]

[node name="Man" parent="Visual" instance=ExtResource("10_6luyg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, 0)

[node name="GeneralSkeleton" parent="Visual/Man/Armature" index="0"]
bones/0/position = Vector3(-0.00433029, 0.9488, 0.00622587)
bones/0/rotation = Quaternion(-0.036373, -0.044742, -0.0256433, 0.998007)
bones/1/rotation = Quaternion(0.0376089, 0.0178367, 0.0261046, 0.998792)
bones/2/rotation = Quaternion(0.0102965, 0.00327617, 0.0136923, 0.999848)
bones/3/rotation = Quaternion(0.0100871, 0.00349258, 0.013724, 0.999849)
bones/4/rotation = Quaternion(0.0550673, -0.00188221, 0.0026385, 0.998477)
bones/5/rotation = Quaternion(-0.0767682, 0.0078928, -0.000646683, 0.997018)
bones/7/rotation = Quaternion(0.454566, 0.502916, 0.633879, -0.372347)
bones/8/rotation = Quaternion(0.133812, 0.817474, -0.548191, -0.115403)
bones/9/rotation = Quaternion(0.0110162, -0.707597, 0.0110161, 0.706444)
bones/10/rotation = Quaternion(0.0439181, 0.469346, -0.0122738, 0.881836)
bones/11/rotation = Quaternion(-0.231044, 0.684612, 0.174753, 0.66887)
bones/12/rotation = Quaternion(0.19734, 0.2084, -0.0554171, 0.956324)
bones/13/rotation = Quaternion(0.0429462, -0.0511794, -0.128221, 0.989493)
bones/15/rotation = Quaternion(0.0661806, -0.0011314, 0.00845778, 0.997771)
bones/16/rotation = Quaternion(0.150998, -1.02818e-06, -0.0154678, 0.988413)
bones/17/rotation = Quaternion(0.0700818, -9.08971e-07, -0.0071817, 0.997515)
bones/19/rotation = Quaternion(0.136508, -0.00443558, -0.0230494, 0.990361)
bones/20/rotation = Quaternion(0.151255, -1.37091e-06, -0.0155001, 0.988373)
bones/21/rotation = Quaternion(0.159933, -1.47522e-06, -0.0163894, 0.986992)
bones/23/rotation = Quaternion(0.183234, -0.00505245, -0.0315434, 0.98255)
bones/24/rotation = Quaternion(0.181391, -1.56462e-06, -0.0185803, 0.983236)
bones/25/rotation = Quaternion(0.155213, -2.6226e-06, -0.0159057, 0.987753)
bones/27/rotation = Quaternion(0.233875, -0.00322329, -0.0490988, 0.971021)
bones/28/rotation = Quaternion(0.151264, -1.45584e-05, -0.0151363, 0.988378)
bones/29/rotation = Quaternion(0.143494, -3.34531e-05, -0.0149323, 0.989539)
bones/31/rotation = Quaternion(0.47065, -0.485058, -0.636173, -0.372144)
bones/32/rotation = Quaternion(-0.152483, 0.839663, -0.479067, 0.20545)
bones/33/rotation = Quaternion(0.0411474, 0.708065, -0.0411475, 0.703745)
bones/34/rotation = Quaternion(0.0348823, -0.568404, 0.0368698, 0.821183)
bones/35/rotation = Quaternion(-0.240999, -0.673672, -0.187784, 0.672921)
bones/36/rotation = Quaternion(0.233851, -0.215131, 0.0462702, 0.947044)
bones/37/rotation = Quaternion(0.050321, 0.0461008, 0.16236, 0.984369)
bones/39/rotation = Quaternion(0.0594786, 0.000874579, -0.0110145, 0.998168)
bones/40/rotation = Quaternion(0.151288, -1.95205e-06, 0.0123201, 0.988413)
bones/41/rotation = Quaternion(0.0702166, -5.96046e-07, 0.0057199, 0.997515)
bones/43/rotation = Quaternion(0.130495, 0.00428629, 0.0190167, 0.991257)
bones/44/rotation = Quaternion(0.151545, -1.2815e-06, 0.0123452, 0.988373)
bones/45/rotation = Quaternion(0.16024, -1.2219e-06, 0.0130535, 0.986992)
bones/47/rotation = Quaternion(0.177437, 0.00489651, 0.0265468, 0.983762)
bones/48/rotation = Quaternion(0.181736, -1.53482e-06, 0.0147969, 0.983236)
bones/49/rotation = Quaternion(0.15551, -2.98023e-08, 0.0126683, 0.987753)
bones/51/rotation = Quaternion(0.228501, 0.00314438, 0.0429391, 0.972591)
bones/52/rotation = Quaternion(0.151548, -4.76837e-07, 0.0123351, 0.988373)
bones/53/rotation = Quaternion(0.143773, -4.47035e-07, 0.0117224, 0.989541)
bones/55/rotation = Quaternion(0.139768, 0.0755958, 0.984317, -0.0766223)
bones/56/rotation = Quaternion(-0.038598, 0.992712, -0.113976, 0.00648415)
bones/57/rotation = Quaternion(-0.0424176, 0.709002, -0.702125, 0.0503719)
bones/58/rotation = Quaternion(-9.08791e-08, 0.999075, 0.0429963, 6.32203e-08)
bones/60/rotation = Quaternion(-0.0929777, -0.0144971, 0.995177, -0.0277)
bones/61/rotation = Quaternion(0.034655, 0.993599, -0.0681437, -0.083164)
bones/62/rotation = Quaternion(0.0101347, 0.676387, -0.735933, -0.0282935)
bones/63/rotation = Quaternion(7.64664e-08, 0.998053, 0.0623707, -3.75515e-08)

[node name="HipsBoneAttachment" type="BoneAttachment3D" parent="Visual/Man/Armature/GeneralSkeleton" index="7"]
transform = Transform3D(0.994681, 0.0544392, -0.0874402, -0.0479296, 0.996039, 0.0748957, 0.0911711, -0.0703063, 0.99335, -0.00433029, 0.9488, 0.00622587)
bone_name = "Hips"
bone_idx = 0

[node name="Belly" type="MeshInstance3D" parent="Visual/Man/Armature/GeneralSkeleton/HipsBoneAttachment"]
transform = Transform3D(0.0999722, -0.000506072, 0.00230272, 0.000499066, 0.0999983, 0.000309922, -0.00230425, -0.000298345, 0.099973, 0.00976999, 0.0936099, 0.0612528)
mesh = SubResource("SphereMesh_t5gpr")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_c5s33")

[node name="HeadBoneAttachment" type="BoneAttachment3D" parent="Visual/Man/Armature/GeneralSkeleton" index="8"]
transform = Transform3D(0.997584, -0.0626571, -0.0300098, 0.0627681, 0.998024, 0.00277042, 0.0297769, -0.00464737, 0.999546, -0.0153301, 1.53746, -0.012798)
bone_name = "Head"
bone_idx = 5

[node name="VomitParticle" type="GPUParticles3D" parent="Visual/Man/Armature/GeneralSkeleton/HeadBoneAttachment"]
transform = Transform3D(0.997861, -0.0525236, -0.0389112, 0.0560501, 0.993811, 0.0959033, -0.0336332, 0.0978793, -0.99463, 0.0215592, 0.00489521, 0.336131)
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_2n4y3")
draw_pass_1 = SubResource("SphereMesh_2w1if")

[node name="DiedRayCast" type="RayCast3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.931602, 0)
target_position = Vector3(0, 0, 1)
debug_shape_custom_color = Color(1, 0.405337, 0.250734, 1)

[node name="VomitRayCast" type="RayCast3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.931602, 0)
target_position = Vector3(0, 0, -1)
debug_shape_custom_color = Color(8.66354e-07, 0.693416, 0.821395, 1)

[node name="Hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.90256, 0)
shape = SubResource("CapsuleShape3D_tix6w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Visual/Man")
libraries = {
"humaniod": ExtResource("3_ewxq3")
}
autoplay = "humaniod/RESET"

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Visual/Man")
tree_root = SubResource("AnimationNodeStateMachine_cpqmt")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/died = false
parameters/conditions/vomit = false
parameters/movement/blend_position = 0.0

[node name="FootstepsSfx" type="AudioStreamPlayer3D" parent="."]
volume_db = -10.0

[node name="CrunchSfx" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.59349, 0)
stream = ExtResource("11_weln5")

[node name="HungerTimer" type="Timer" parent="."]

[connection signal="timeout" from="HungerTimer" to="." method="_on_hunger_timer_timeout"]

[editable path="Visual/Man"]
